--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
+    <!-- Establece la base para las rutas relativas -->
+    <base href="/Network-Certification-Report-Generatior/">
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sistema de Certificación de Redes</title>
