Cambio confirmado: Actualizar la configuración de la base para rutas relativas en index.html

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <!-- Establece la base para las rutas relativas -->
-    <base href="/Network-Certification-Report-Generatior/">
+    <!-- La base para las rutas relativas se configura dinámicamente en el archivo de configuración del build tool -->
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sistema de Certificación de Redes</title>
